[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = ["debug"]
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
board_plugin = { path = "board_plugin" }

# Hiearchy inspector debug
bevy-inspector-egui = { version = "0.19", optional = true }
bevy = "0.12.1"

[workspace]
members = [
  "board_plugin"
]
