[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = ["debug"]
debug = ["board_plugin/debug", "bevy-inspector-egui"]
bevy-inspector-egui = ["dep:bevy-inspector-egui"]

[dependencies]
board_plugin = { path = "board_plugin" }
bevy = "0.12.1"
bevy-inspector-egui = { version = "0.22.1", optional = true }

[workspace]
members = [
  "board_plugin"
]
