[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
# Engine
bevy = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Random
rand = "0.8"

# Console debug
colored = { version = "2.0", optional = true }

# Hiearchy inspector debug
bevy-inspector-egui = { version = "0.19", optional = true }

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]
